--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="assets/style/main.css">
 </head>
 
 <body>
@@ -55,7 +56,7 @@
         </button>
     </div>
     <div class="container text-center py-3 fw-lighter">
-        <div class="d-flex flex-row overflow-x-auto" style="overflow-x: auto; white-space: nowrap;">
+        <div class="d-flex flex-row overflow-x-auto mainMenu" style="overflow-x: auto; white-space: nowrap;">
             <div class="col-3">
                 <div class="card border-0">
                     <div class="card-body">
@@ -112,7 +113,7 @@
                 <i class="bi bi-fire fw-bold text-danger"></i> <span class="fw-bold"> Populer</span>
             </div>
         </div>
-        <div class="d-flex flex-row" style="overflow-x: auto; white-space: nowrap;">
+        <div class="d-flex flex-row overflow-x-auto populerGames" style="overflow-x: auto; white-space: nowrap;">
             <div class="col-4 pt-5 me-1">
                 <div class="border rounded-3 py-3 text-center position-relative">
                     <img class="position-absolute top-0 start-50 translate-middle"
@@ -258,22 +259,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-    <script>
-        function seeMore(e) {
-            e.innerHTML = `<div class="spinner-border spinner-border-sm" role="status">
-  <span class="visually-hidden">Loading...</span>
-</div> <span>Loading...</span>`
-            setTimeout(() => {
-                e.innerHTML = `See More`
-                alert('Tidak ada data lagi!')
-            }, 4000)
-        }
-
-        function alertBuy(name) {
-            alert(`maat produk ${name} belum tersedia!`)
-        }
-    </script>
+    <script src="assets/script/main.js"></script>
 </body>
 
 </html>
